CV update, projects section update

--- a/en/portfolio.html
+++ b/en/portfolio.html
@@ -488,9 +488,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-code text-white fa-xl"></i>
+                        <a href="https://haj-aina.vercel.app" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Malagasy Ethical Fashion Platform</h4>
+                        <h5>Malagasy Ethical Fashion Platform</h5>
                         <ul>
                             <li>Next JS</li>
                             <li>Motion.js</li>
@@ -505,9 +508,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-laptop-code text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Interactive Professional Portfolio</h4>
+                        <h5>Interactive Professional Portfolio</h5>
                         <ul>
                             <li>HTML, CSS</li>
                             <li>GSAP, Three JS</li>
@@ -521,9 +527,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-robot text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Social Media Post Automation</h4>
+                        <h5>Social Media Post Automation</h5>
                         <ul>
                             <li>N8N</li>
                             <li>Gemini API</li>
@@ -536,11 +545,14 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-envelope-open-text text-white fa-xl"></i>
+                        <a href="https://herstorymadagascar.systeme.io/newsletter-subscription" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Her Story Madagascar Newsletter</h4>
+                        <h5>Her Story Madagascar Newsletter</h5>
                         <ul>
-                            <li>System.io</li>
+                            <li>Systeme.io</li>
                         </ul>
                     </div>
                 </div>
@@ -550,23 +562,29 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-pencil-ruler text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Wedding Organization Platform</h4>
+                        <h5>Wedding Organization Platform</h5>
                         <ul>
                             <li>Visily (Design)</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-cube text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Web 3D Viewer</h4>
+                        <h5>Web 3D Viewer</h5>
                         <ul>
                             <li>React</li>
                             <li>Node JS</li>
@@ -580,9 +598,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-car text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Car Rental Plateform</h4>
+                        <h5>Car Rental Plateform</h5>
                         <ul>
                             <li>React</li>
                             <li>Node JS</li>
@@ -596,9 +617,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-gamepad text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Fun & Educational Multilingual Platform</h4>
+                        <h5>Fun & Educational Multilingual Platform</h5>
                         <ul>
                             <li>React</li>
                             <li>Tailwind</li>
@@ -613,9 +637,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-file-alt text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>MCQ Creation and Sharing Platform</h4>
+                        <h5>MCQ Creation and Sharing Platform</h5>
                         <ul>
                             <li>Figma (Design)</li>
                             <li>Flutter</li>
@@ -628,13 +655,14 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-heartbeat text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Hospital Alert & Accident Detection System</h4>
+                        <h5>Object Detection System</h5>
                         <ul>
-                            <li>React</li>
-                            <li>YOLO (Detection)</li>
-                            <li>React Native</li>
+                            <li>YOLO</li>
                         </ul>
                     </div>
                 </div>
@@ -644,9 +672,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-graduation-cap text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>ENI Student Association Website</h4>
+                        <h5>ENI Student Association Website</h5>
                         <ul>
                             <li>HTML, CSS</li>
                             <li>Bootstrap</li>
