--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -474,17 +474,21 @@
     <!-- Projects Section Begin -->
     <section id="projects" data-aos="fade-in" class="portfolio">
         <div class="section-title">
-            <span>Projects</span>
-            <h2>My achievements?</h2>
+            <span>Projets</span>
+            <h2>Mes réalisations ?</h2>
         </div>
         <div class="row portfolio__gallery">
+
             <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-code text-white fa-xl"></i>
+                        <a href="https://haj-aina.vercel.app" target="_blank" class="btn-visit" title="Visiter le site">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Plateforme Mode Éthique Malgache</h4>
+                        <h5>Plateforme de Mode Éthique Malgache</h5>
                         <ul>
                             <li>Next JS</li>
                             <li>Motion.js</li>
@@ -499,9 +503,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-laptop-code text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Portfolio Professionnel Interactif</h4>
+                        <h5>Portfolio Professionnel Interactif</h5>
                         <ul>
                             <li>HTML, CSS</li>
                             <li>GSAP, Three JS</li>
@@ -515,9 +522,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-robot text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Voir le projet">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Automation de Post Réseaux Sociaux</h4>
+                        <h5>Automatisation des Publications sur les Réseaux Sociaux</h5>
                         <ul>
                             <li>N8N</li>
                             <li>Gemini API</li>
@@ -530,11 +540,15 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-envelope-open-text text-white fa-xl"></i>
+                        <a href="https://herstorymadagascar.systeme.io/newsletter-subscription" target="_blank"
+                            class="btn-visit" title="S'abonner">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Newsletter Her Story Madagascar</h4>
+                        <h5>Newsletter Her Story Madagascar</h5>
                         <ul>
-                            <li>System.io</li>
+                            <li>Systeme.io</li>
                         </ul>
                     </div>
                 </div>
@@ -544,11 +558,14 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-pencil-ruler text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Voir le design">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Plateforme Organisation Mariage</h4>
+                        <h5>Plateforme d'Organisation de Mariages</h5>
                         <ul>
-                            <li>Visily (Conception)</li>
+                            <li>Visily (Design)</li>
                         </ul>
                     </div>
                 </div>
@@ -558,13 +575,16 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-cube text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Visionneur 3D pour le Web</h4>
+                        <h5>Visionneuse Web 3D</h5>
                         <ul>
                             <li>React</li>
-                            <li>Three JS</li>
-                            <li>Google Model Viewer</li>
+                            <li>Node JS</li>
+                            <li>MySQL</li>
                         </ul>
                     </div>
                 </div>
@@ -574,9 +594,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-car text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Plateforme de location de voiture</h4>
+                        <h5>Plateforme de Location de Voitures</h5>
                         <ul>
                             <li>React</li>
                             <li>Node JS</li>
@@ -590,9 +613,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-gamepad text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Plateforme Ludique et Éducative</h4>
+                        <h5>Plateforme Ludique et Éducative Multilingue</h5>
                         <ul>
                             <li>React</li>
                             <li>Tailwind</li>
@@ -607,11 +633,14 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-file-alt text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Voir le design">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Plateforme de Création et de Partage de QCM</h4>
+                        <h5>Plateforme de Création et Partage de QCM</h5>
                         <ul>
-                            <li>Figma (Conception)</li>
+                            <li>Figma (Design)</li>
                             <li>Flutter</li>
                         </ul>
                     </div>
@@ -622,13 +651,14 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-heartbeat text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Voir le projet">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Système de Prévention Alertes Hôpital</h4>
+                        <h5>Système de Détection d'Objets</h5>
                         <ul>
-                            <li>React</li>
-                            <li>YOLO (Détection)</li>
-                            <li>React Native</li>
+                            <li>YOLO</li>
                         </ul>
                     </div>
                 </div>
@@ -638,9 +668,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-graduation-cap text-white fa-xl"></i>
+                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
+                            <i class="fa fa-link"></i>
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Site Vitrine Association ENI</h4>
+                        <h5>Site Web de l'Association Étudiante de l'ENI</h5>
                         <ul>
                             <li>HTML, CSS</li>
                             <li>Bootstrap</li>
