add images to portfolio

--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -478,12 +478,28 @@
             <h2>Mes réalisations ?</h2>
         </div>
         <div class="row portfolio__gallery">
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/1.png">
+                        <a href="#" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h5>Portfolio Professionnel Interactif</h5>
+                        <ul>
+                            <li>HTML, CSS</li>
+                            <li>GSAP, Three JS</li>
+                            <li>Vercel</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-code text-white fa-xl"></i>
-                        <a href="https://haj-aina.vercel.app" target="_blank" class="btn-visit" title="Visiter le site">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/2.png">
+                        <a href="https://haj-aina.vercel.app" target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
                         </a>
                     </div>
@@ -499,126 +515,15 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
-                <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-laptop-code text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
-                            <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                    <div class="portfolio__item__text">
-                        <h5>Portfolio Professionnel Interactif</h5>
-                        <ul>
-                            <li>HTML, CSS</li>
-                            <li>GSAP, Three JS</li>
-                            <li>Vercel</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6 mix automation other">
-                <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-robot text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Voir le projet">
-                            <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                    <div class="portfolio__item__text">
-                        <h5>Automatisation des Publications sur les Réseaux Sociaux</h5>
-                        <ul>
-                            <li>N8N</li>
-                            <li>Gemini API</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web other">
-                <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-envelope-open-text text-white fa-xl"></i>
-                        <a href="https://herstorymadagascar.systeme.io/newsletter-subscription" target="_blank"
-                            class="btn-visit" title="S'abonner">
-                            <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                    <div class="portfolio__item__text">
-                        <h5>Newsletter Her Story Madagascar</h5>
-                        <ul>
-                            <li>Systeme.io</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6 mix design web">
-                <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-pencil-ruler text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Voir le design">
-                            <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                    <div class="portfolio__item__text">
-                        <h5>Plateforme d'Organisation de Mariages</h5>
-                        <ul>
-                            <li>Visily (Design)</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
-                <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-cube text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
-                            <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                    <div class="portfolio__item__text">
-                        <h5>Visionneuse Web 3D</h5>
-                        <ul>
-                            <li>React</li>
-                            <li>Node JS</li>
-                            <li>MySQL</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
-                <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-car text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
-                            <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                    <div class="portfolio__item__text">
-                        <h5>Plateforme de Location de Voitures</h5>
-                        <ul>
-                            <li>React</li>
-                            <li>Node JS</li>
-                            <li>MySQL</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
             <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-gamepad text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/6.png">
+                        <!-- <a href="#" target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
-                        </a>
+                        </a> -->
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Plateforme Ludique et Éducative Multilingue</h5>
+                        <h5>Plateforme Multilingue Amusante et Éducative</h5>
                         <ul>
                             <li>React</li>
                             <li>Tailwind</li>
@@ -629,36 +534,69 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design web">
                 <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-file-alt text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Voir le design">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/5.png">
+                        <a href="https://app.visily.ai/projects/c4ea31e6-f285-4c4d-b62a-48214f496701/boards/2109241"
+                            target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
                         </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Plateforme de Création et Partage de QCM</h5>
+                        <h5>Plateforme d'Organisation de Mariage</h5>
                         <ul>
-                            <li>Figma (Design)</li>
-                            <li>Flutter</li>
+                            <li>Visily (Design)</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-6 mix mobile other">
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
                 <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-heartbeat text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Voir le projet">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/4.png">
+                        <a href="https://profis.appsmith.com/app/profis-erp/landing-68cad329a8c94c18d386efe2?embed=true"
+                            target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
                         </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Système de Détection d'Objets</h5>
+                        <h5>Système ERP Personnalisé</h5>
                         <ul>
-                            <li>YOLO</li>
+                            <li>Appsmith</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web other">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/3.png">
+                        <a href="https://herstorymadagascar.systeme.io/newsletter-subscription" target="_blank"
+                            class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h5>Infolettre Her Story Madagascar</h5>
+                        <ul>
+                            <li>Systeme.io</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/7.png">
+                        <a href="https://www.figma.com/design/PFzDzYdlZptjapZwcztdmy/MCQHub?node-id=0-1&p=f&t=gdE20k0gq9aHIoj8-0" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h5>Plateforme de Partage QCM</h5>
+                        <ul>
+                            <li>Figma (Design)</li>
+                            <li>Flutter</li>
                         </ul>
                     </div>
                 </div>
@@ -668,12 +606,12 @@
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-graduation-cap text-white fa-xl"></i>
-                        <a href="#" target="_blank" class="btn-visit" title="Visiter le site">
+                        <a href="https://aeeni-uf.github.io/devhunt-edition-1-Rusted/" target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
                         </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Site Web de l'Association Étudiante de l'ENI</h5>
+                        <h5>Site Web de l'Association Étudiante ENI</h5>
                         <ul>
                             <li>HTML, CSS</li>
                             <li>Bootstrap</li>
@@ -797,7 +735,7 @@
                             <script>
                                 document.write(new Date().getFullYear());
                             </script>
-                            Tous droits réservés
+                            Dylan Rakotonarivo. Tous droits réservés
                         </p>
                     </div>
                 </div>
