Update project section

--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -486,7 +486,7 @@
                         </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Portfolio Professionnel Interactif</h5>
+                        <h5>Portfolio Professionnel</h5>
                         <ul>
                             <li>HTML, CSS</li>
                             <li>GSAP, Three JS</li>
@@ -504,7 +504,7 @@
                         </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Plateforme de Mode Éthique Malgache</h5>
+                        <h5>Plateforme Mode Éthique Malgache</h5>
                         <ul>
                             <li>Next JS</li>
                             <li>Motion.js</li>
@@ -517,13 +517,31 @@
 
             <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/6.png">
-                        <!-- <a href="#" target="_blank" class="btn-visit">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/3.png">
+                        <a href="https://dylanmickael.github.io/AEENI-website/" target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
-                        </a> -->
+                        </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Plateforme Multilingue Amusante et Éducative</h5>
+                        <h5>Site Web Association Étudiants ENI</h5>
+                        <ul>
+                            <li>HTML, CSS</li>
+                            <li>Bootstrap</li>
+                            <li>GSAP</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/4.png">
+                        <a href="https://dylanmickael.github.io/technologia-gamified-educational-plateform/" target="_blank" class="btn-visit">
+                            <i class="fa fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h5>Plateforme Éducative Gamifiée</h5>
                         <ul>
                             <li>React</li>
                             <li>Tailwind</li>
@@ -551,26 +569,9 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
-                <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/4.png">
-                        <a href="https://profis.appsmith.com/app/profis-erp/landing-68cad329a8c94c18d386efe2?embed=true"
-                            target="_blank" class="btn-visit">
-                            <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                    <div class="portfolio__item__text">
-                        <h5>Système ERP Personnalisé</h5>
-                        <ul>
-                            <li>Appsmith</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
             <div class="col-lg-4 col-md-6 col-sm-6 mix web other">
                 <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/3.png">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/6.png">
                         <a href="https://herstorymadagascar.systeme.io/newsletter-subscription" target="_blank"
                             class="btn-visit">
                             <i class="fa fa-link"></i>
@@ -588,33 +589,33 @@
             <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/7.png">
-                        <a href="https://www.figma.com/design/PFzDzYdlZptjapZwcztdmy/MCQHub?node-id=0-1&p=f&t=gdE20k0gq9aHIoj8-0" target="_blank" class="btn-visit">
+                        <a href="https://profis.appsmith.com/app/profis-erp/landing-68cad329a8c94c18d386efe2?embed=true"
+                            target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
                         </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Plateforme de Partage QCM</h5>
+                        <h5>Système ERP Personnalisé</h5>
                         <ul>
-                            <li>Figma (Design)</li>
-                            <li>Flutter</li>
+                            <li>Appsmith</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
                 <div class="portfolio__item">
-                    <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-graduation-cap text-white fa-xl"></i>
-                        <a href="https://aeeni-uf.github.io/devhunt-edition-1-Rusted/" target="_blank" class="btn-visit">
+                    <div class="portfolio__item__image set-bg" data-setbg="../assets/img/projects/8.png">
+                        <a href="https://www.figma.com/design/PFzDzYdlZptjapZwcztdmy/MCQHub?node-id=0-1&p=f&t=gdE20k0gq9aHIoj8-0"
+                            target="_blank" class="btn-visit">
                             <i class="fa fa-link"></i>
                         </a>
                     </div>
                     <div class="portfolio__item__text">
-                        <h5>Site Web de l'Association Étudiante ENI</h5>
+                        <h5>Plateforme de Partage de QCM</h5>
                         <ul>
-                            <li>HTML, CSS</li>
-                            <li>Bootstrap</li>
+                            <li>Figma (Design)</li>
+                            <li>Flutter</li>
                         </ul>
                     </div>
                 </div>
@@ -768,6 +769,7 @@
     <script src="/assets/vendors/vanta/vanta.globe.min.js"></script>
     <script src="/assets/vendors/scroll-to-top/scroll-to-top.js"></script>
     <script src="/assets/js/portfolio.js"></script>
+    <script src="/assets/js/animation.js"></script>
     
 </body>
 
