correct "resume-subtitle" text in the resume section

--- a/en/portfolio.html
+++ b/en/portfolio.html
@@ -206,7 +206,7 @@
                         </ul>
                     </div>
                     <div class="resume-item">
-                        <h4 class="resume-subtitle">Compentitions</h4>
+                        <h4 class="resume-subtitle">Contests</h4>
                         <ul class="resume-paragraph">
                             <li>Thrived in collaborative environments, such as Game Jams.</li>
                             <li>Applied skills to collective projects during intense experiences.</li>
